--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "laratest",
   "displayName": "LaraTest",
   "description": "Run Feature, Unit, and Dusk tests with Artisan",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/KimPalao/laratest"
